css and alignment issues updated

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ html,body{
 	position:absolute;
 	left:30%;
 	background:transparent;
-	top:30%;
+	top:20%;
 }
 
 #loader{
